--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
       <% if current_user %>
         <%= link_to('登出', destroy_user_session_path, :method => :delete) %>
         <%= link_to('修改密码', edit_registration_path(:user)) %>
+        <%= link_to('我的收藏', favorite_posts_path(:post)) %>
       <% else %>
         <%= link_to('注册', new_registration_path(:user)) %> |
         <%= link_to('登入', new_session_path(:user)) %>
