--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,6 +14,10 @@
 
       <% if current_user && post.user == current_user%>
           <%= link_to "Delete", post_path(post), :method => :delete, :remote => true, :class => "btn btn-danger" %>
+
+          <span id="post-favorite-<%= post.id %>">
+            <%= render :partial => "favorite", :locals => { :post => post }%>
+          </span>
       <% end %>
 
     </div>
