--- a/app/views/posts/_favorite.html.erb
+++ b/app/views/posts/_favorite.html.erb
@@ -1,5 +1,5 @@
 <% if post.find_favorite(current_user) %>
-  <%= link_to "取消收藏", defavorite_post_path(post), :method => :post, :remote => true,:class => "btn btn-primary" %>
+  <%= link_to "♡", defavorite_post_path(post), :method => :post, :remote => true,:class => "btn btn-primary" %>
 <% else %>
-  <%= link_to "收藏", favorite_post_path(post), :method => :post, :remote => true,:class => "btn btn-primary" %>
+  <%= link_to "❤", favorite_post_path(post), :method => :post, :remote => true,:class => "btn btn-primary" %>
 <% end %>
