--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -34,7 +34,7 @@
       // dataType: 'script'  // 要求服务器回传 javascript
       dataType: 'json',  // 要求服务器回传 json
       success: function(data){     // data 就是服务器回传的 JSON 资料
-        $('#post-' + data["id"]).remove();
+        $("#post-" + data["id"]).remove();
       }
     })
   })
