--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -71,6 +71,21 @@
           $(that).closest("label").find("span").html("");
         }
       }
-    })
-  })
+    });
+  });
+
+  $("#post-list").on('change', ".select_category", function(){
+    var url = $(this).data("url");
+
+    $.ajax({
+      url: url,
+      method: "PATCH",
+      dataType: "json",
+      data: {
+        post: {
+          category_id: $(this).val()
+        }
+      }
+    });
+  });
 </script>
