fix favorite bug induce logout error

--- a/app/views/posts/_favorite.html.erb
+++ b/app/views/posts/_favorite.html.erb
@@ -1,4 +1,4 @@
-<% if post.find_favorite(current_user) %>
+<% if current_user %>
   <%= link_to "♡", defavorite_post_path(post), :method => :post, :remote => true,:class => "btn btn-default" %>
 <% else %>
   <%= link_to "❤", favorite_post_path(post), :method => :post, :remote => true,:class => "btn btn-default" %>
