--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application' %>
+
   </head>
 
   <body>
@@ -38,5 +38,8 @@
     </div>
 
     <%= yield %>
+
+    <%= javascript_include_tag 'application' %>
+    <%= yield :handwrite_javascript %>
   </body>
 </html>
