--- a/app/views/pages/jquery_1.html.erb
+++ b/app/views/pages/jquery_1.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
 
+<%= content_for :handwrite_javascript do %>
   <script>
     //原来 JavaScript的注解也是这个双斜杠啊
     //也可以缩写成 $(function()){
@@ -9,6 +10,7 @@
       })
     })
   </script>
+<% end %>
 
   <p>
    <a id="my-click">Click Me</a>
